--- a/.github/workflows/build_and_test_eshop.yml
+++ b/.github/workflows/build_and_test_eshop.yml
@@ -119,6 +119,15 @@ jobs:
         run: |
             pip3 install ansible boto boto3
 
-      - name: Setup SSH Key
-        run: |
+      - name: Setup Ansible
+        uses: dawidd6/action-ansible-playbook@v2.8.0
+        with:
+          playbook: 'ansible/ansible.yml'
+          key: ~/.ssh/Test.pem'
+        env:
+          ANSIBLE_HOST_KEY_CHECKING: "False"
+          ANSIBLE_PRIVATE_KEY_FILE: ~/.ssh/Test.pem'
+          ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          SESSION_TOKEN: ${{ secrets.SESSION_TOKEN }}
 
