--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -2,9 +2,9 @@
   hosts: localhost
   connection: local
   vars:
-    aws_access_key: "{{ lookup('env', 'ACCESS_KEY') }}"
-    aws_secret_key: "{{ lookup('env', 'SECRET_KEY') }}"
-    aws_session_token: "{{ lookup('env', 'SESSION_TOKEN') }}"
+    access_key: "{{ lookup('env', 'ACCESS_KEY') }}"
+    secret_key: "{{ lookup('env', 'SECRET_KEY') }}"
+    session_token: "{{ lookup('env', 'SESSION_TOKEN') }}"
 
   tasks:
     - name: Launch EC2 Instance
