--- a/.github/workflows/build_and_test_eshop.yml
+++ b/.github/workflows/build_and_test_eshop.yml
@@ -123,10 +123,10 @@ jobs:
         uses: dawidd6/action-ansible-playbook@v2.8.0
         with:
           playbook: 'ansible/ec2_deploy.yml'
-          key: ~/.ssh/Test.pem'
+          key: ${{ secrets.SSH }}
         env:
           ANSIBLE_HOST_KEY_CHECKING: "False"
-          ANSIBLE_PRIVATE_KEY_FILE: ~/.ssh/Test.pem'
+          ANSIBLE_PRIVATE_KEY_FILE: ${{ secrets.SSH }}
           ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           SESSION_TOKEN: ${{ secrets.SESSION_TOKEN }}
