--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -16,7 +16,7 @@
         vpc_subnet_id: subnet-0bb7b3aa91dcdcb90
         tags:
           Name: Eshop
-          #Deployment: "{{ lookup('env', 'GITHUB_RUN_ID') }}"
+          Deployment: "{{ lookup('env', 'GITHUB_RUN_ID') }}"
         network:
           assign_public_ip: yes
         wait: yes
