--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -1,21 +1,3 @@
-- name: Delete old EC2 instances
-  hosts: localhost
-  connection: local
-  vars:
-    access_key: "{{ lookup('env', 'ACCESS_KEY') }}"
-    secret_key: "{{ lookup('env', 'SECRET_KEY') }}"
-    session_token: "{{ lookup('env', 'SESSION_TOKEN') }}"
-  tasks:
-    - name: Terminate existing EC2 instances
-      ec2_instance:
-        state: absent
-        filters:
-          "tag:Name": "Eshop"
-        region: us-east-1
-        aws_access_key: "{{ access_key }}"
-        aws_secret_key: "{{ secret_key }}"
-        security_token: "{{ session_token }}"
-
 - name: Deploy to EC2
   hosts: localhost
   connection: local
@@ -34,6 +16,7 @@
         vpc_subnet_id: subnet-0bb7b3aa91dcdcb90
         tags:
           Name: Eshop
+          DeploymentID: "{{ lookup('pipe', 'date +%Y%m%d%H%M%S') }}"
         network:
           assign_public_ip: yes
         wait: yes
@@ -103,3 +86,22 @@
       wait_for:
         port:
           80
+
+- name: Delete old EC2 instances
+  hosts: localhost
+  connection: local
+  vars:
+    access_key: "{{ lookup('env', 'ACCESS_KEY') }}"
+    secret_key: "{{ lookup('env', 'SECRET_KEY') }}"
+    session_token: "{{ lookup('env', 'SESSION_TOKEN') }}"
+  tasks:
+    - name: Terminate existing EC2 instances
+      ec2_instance:
+        state: absent
+        filters:
+          "tag:Name": "Eshop"
+          "tag:DeploymentID": "{{ lookup('pipe', 'date +%Y%m%d%H%M%S') }}"
+        region: us-east-1
+        aws_access_key: "{{ access_key }}"
+        aws_secret_key: "{{ secret_key }}"
+        security_token: "{{ session_token }}"
