--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -87,7 +87,7 @@
         port:
           80
 
-- name: Delete old EC2 instance
+- name: Delete old EC2 instances
   hosts: localhost
   connection: local
   vars:
