--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -64,7 +64,7 @@
 
     - name: Fetch eshop from Git
       git:
-        repo: 'https://github.com/Ghouuust/4IT572_docker.git'
+        repo: 'https://github.com/Ghouuust/4IT572_semestral_thesis.git'
         dest: ./app
 
     - name: Build Eshop Docker image
@@ -100,7 +100,7 @@
         state: absent
         filters:
           "tag:Name": "Eshop"
-          "tag:DeploymentID": "{{ lookup('pipe', 'date +%Y%m%d%H%M%S') }}"
+          "tag:DeploymentID": "< '{{ lookup('pipe', 'date --date=\"1 minute ago\" +%Y%m%d%H%M%S') }}'"
         region: us-east-1
         aws_access_key: "{{ access_key }}"
         aws_secret_key: "{{ secret_key }}"
