--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -95,13 +95,24 @@
     secret_key: "{{ lookup('env', 'SECRET_KEY') }}"
     session_token: "{{ lookup('env', 'SESSION_TOKEN') }}"
   tasks:
-    - name: Terminate existing EC2 instances
-      ec2_instance:
-        state: absent
+    - name: Gather facts about all EC2 instances named Eshop
+      ec2_instance_info:
         filters:
           "tag:Name": "Eshop"
-          "tag:DeploymentID": "< '{{ lookup('pipe', 'date --date=\"1 minute ago\" +%Y%m%d%H%M%S') }}'"
         region: us-east-1
         aws_access_key: "{{ access_key }}"
         aws_secret_key: "{{ secret_key }}"
         security_token: "{{ session_token }}"
+      register: ec2_facts
+
+    - name: Terminate old EC2 instances named Eshop
+      ec2_instance:
+        state: absent
+        instance_ids: "{{ item.instance_id }}"
+        region: us-east-1
+        aws_access_key: "{{ access_key }}"
+        aws_secret_key: "{{ secret_key }}"
+        security_token: "{{ session_token }}"
+      with_items: "{{ ec2_facts.instances }}"
+      when: "(ansible_date_time.epoch | int) - (item.launch_time | to_datetime('%Y-%m-%dT%H:%M:%S%z').strftime('%s') | int) > 60"
+
