delete all then deploy 2

--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -105,23 +105,23 @@
         port:
           80
 
-- name: Delete old EC2 instances
-  hosts: localhost
-  connection: local
-  vars:
-    access_key: "{{ lookup('env', 'ACCESS_KEY') }}"
-    secret_key: "{{ lookup('env', 'SECRET_KEY') }}"
-    session_token: "{{ lookup('env', 'SESSION_TOKEN') }}"
-  tasks:
-    - name: Gather facts about all EC2 instances named Eshop
-      ec2_instance_info:
-        filters:
-          "tag:Name": "Eshop"
-        region: us-east-1
-        aws_access_key: "{{ access_key }}"
-        aws_secret_key: "{{ secret_key }}"
-        security_token: "{{ session_token }}"
-      register: ec2_facts
+#- name: Delete old EC2 instances
+ # hosts: localhost
+  #connection: local
+  #vars:
+   # access_key: "{{ lookup('env', 'ACCESS_KEY') }}"
+   # secret_key: "{{ lookup('env', 'SECRET_KEY') }}"
+   # session_token: "{{ lookup('env', 'SESSION_TOKEN') }}"
+  #tasks:
+   # - name: Gather facts about all EC2 instances named Eshop
+    #  ec2_instance_info:
+     #   filters:
+      #    "tag:Name": "Eshop"
+      #  region: us-east-1
+      #  aws_access_key: "{{ access_key }}"
+      #  aws_secret_key: "{{ secret_key }}"
+      # security_token: "{{ session_token }}"
+     # register: ec2_facts
 
     #- name: Terminate old EC2 instances named Eshop
       #ec2_instance:
