--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -81,7 +81,7 @@
         ports:
           - "80:3000"
 
-    - name: Wait for eshop to run
+    - name: Wait for eshop to runs
       wait_for:
         port:
           80
