--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -16,7 +16,6 @@
         vpc_subnet_id: subnet-0bb7b3aa91dcdcb90
         tags:
           Name: Eshop
-          DeploymentID: "{{ lookup('pipe', 'date +%Y%m%d%H%M%S') }}"
         network:
           assign_public_ip: yes
         wait: yes
@@ -114,5 +113,5 @@
         aws_secret_key: "{{ secret_key }}"
         security_token: "{{ session_token }}"
       with_items: "{{ ec2_facts.instances }}"
-      when: "(ansible_date_time.epoch | int) - (item.launch_time | to_datetime('%Y-%m-%dT%H:%M:%S%z').strftime('%s') | int) > 60"
+      when: "item.instance_id != ec2_instance_result.instances[0].instance_id"
 
