--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -113,5 +113,5 @@
         aws_secret_key: "{{ secret_key }}"
         security_token: "{{ session_token }}"
       with_items: "{{ ec2_facts.instances }}"
-      when: "item.instance_id != ec2_instance_result.instances[0].instance_id"
+      when: "item.instance_id != ec2_instance_result.instances[0].id"
 
