--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -5,7 +5,7 @@
     access_key: "{{ lookup('env', 'ACCESS_KEY') }}"
     secret_key: "{{ lookup('env', 'SECRET_KEY') }}"
     session_token: "{{ lookup('env', 'SESSION_TOKEN') }}"
-    current_time: "{{ lookup('pipe', 'date +%Y%m%d%H%M%S') }}"
+    #current_time: "{{ lookup('pipe', 'date +%Y%m%d%H%M%S') }}"
 
   tasks:
     - name: Launch EC2 Instance
@@ -17,7 +17,7 @@
         vpc_subnet_id: subnet-0bb7b3aa91dcdcb90
         tags:
           Name: Eshop
-          DeploymentTime: "{{ current_time }}"
+          #DeploymentTime: "{{ current_time }}"
         network:
           assign_public_ip: yes
         wait: yes
@@ -114,6 +114,8 @@
         aws_access_key: "{{ access_key }}"
         aws_secret_key: "{{ secret_key }}"
         security_token: "{{ session_token }}"
-      loop: "{{ ec2_facts.instances }}"
-      when: "item.tags.DeploymentTime < current_time"
+      with_items: "{{ ec2_facts.instances }}"
+      when: "item.instance_id != ec2_instance_result"
+      failed_when: "item.instance_id = ec2_instance_result"
+
 
