--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -107,7 +107,7 @@
         security_token: "{{ session_token }}"
       register: ec2_facts
 
-    - name: Terminate old EC2 instances named Eshop
+    - name: Terminate old EC2 instance named Eshop
       ec2_instance:
         state: absent
         instance_ids: "{{ item.instance_id }}"
