Delete non actual Eshop instances after deployment

--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -116,8 +116,8 @@
         aws_secret_key: "{{ secret_key }}"
         security_token: "{{ session_token }}"
       loop: "{{ ec2_facts.instances }}"
-      when: "item.instance_id != ec2_instance_result.instance_ids[0]"
-      failed_when: "item.instance_id == ec2_instance_result.instance_ids[0]"
+      when: "item.instance_id == ec2_instance_result.instance_ids[0]"
+      failed_when: "item.instance_id != ec2_instance_result.instance_ids[0]"
       #with_items: "{{ ec2_facts.instances }}"
       #failed_when: "item.instance_id = ec2_instance_result"
       #loop: "{{ ec2_facts.instances }}"
